--- a/Doors NX Disk Preparation Utility/Doors NX Disk Preparation Utility.vcxproj
+++ b/Doors NX Disk Preparation Utility/Doors NX Disk Preparation Utility.vcxproj
@@ -32,7 +32,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v143</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -120,6 +120,7 @@
       <ManifestFile>$(IntDir)gptpart$(TargetExt).intermediate.manifest</ManifestFile>
       <ProgramDatabaseFile>$(OutDir)gptpart.pdb</ProgramDatabaseFile>
       <LinkTimeCodeGenerationObjectFile>$(IntDir)gptpart.iobj</LinkTimeCodeGenerationObjectFile>
+      <UACExecutionLevel>RequireAdministrator</UACExecutionLevel>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
