Add project files.

--- a/Doors NX Disk Preparation Utility/Doors NX Disk Preparation Utility.vcxproj
+++ b/Doors NX Disk Preparation Utility/Doors NX Disk Preparation Utility.vcxproj
@@ -19,7 +19,11 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="diskio.c" />
     <ClCompile Include="main.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="diskio.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
